# JR

opencv1/: CMakeLists.txt  main.cpp
opencv1.1/: experiment1.csv  main.cpp
opencv2CL/: CMakeLists.txt  main.cpp
opencv3CL/: CMakeLists.txt  main.cpp
